# Esame-Lab.-Programmazione

./: .gitignore  AbItem.h  Bag.cpp  Bag.h  CMakeLists.txt  ConsumableItem.cpp  ConsumableItem.h  ExceptionsFile.h  ExeptionsFile.h  Hero.cpp  Hero.h  Item.cpp  Item.h  MainFunction.h  MainFunctions.h  Master.cpp  Master.h  NormItem.cpp  NormItem.h  NumberAnswerFunction.cpp  NumberAnswerFunctions.h  NumberFunctions.cpp  NumberFunctions.h  Player.cpp  Player.h  README.md  Test.cpp  main.cpp
test/: BagTest.cpp  CMakeLists.txt  ExceptionsByNumberFunctionsTest.cpp  HeroTest.cpp  ItemTest.cpp  MainFunctionsTest.cpp  MasterTest.cpp  NormItemTest.cpp  NumberAnswerFunctionsTest.cpp  PlayerTest.cpp
